--- a/app/templates/table_details.html
+++ b/app/templates/table_details.html
@@ -67,7 +67,11 @@
 
     <!-- Main Content -->
     <div class="container mt-5">
-            <h1> Here table details will be shown. </h1>
+            <h1> Table Details </h1>
+            {% if orders %}
+            <table class = "table table-striped table-hover table-bordered">
+                
+            </table>
     </div>
 
     <!-- Add Bootstrap JS and dependencies -->
