--- a/app/templates/table_details.html
+++ b/app/templates/table_details.html
@@ -70,8 +70,36 @@
             <h1> Table Details </h1>
             {% if orders %}
             <table class = "table table-striped table-hover table-bordered">
+                <thead class = "table-dark">
+                    <tr>
+                    <th>Order ID</th>
+                    <th>Customer Name</th>
+                    <th>Items</th>
+                    <th>Total Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for order in orders %}
+                    <tr>
+                        <td>{{ order.id }}</td>
+                        <td>{{ order.customer_name }}</td>
+                        <td>
+                            <ul>
+                                {% for item in order.order_item.all %}
+                                <li>{{ item.name }} (x{{ item.quantity }}) - ${{ item.price }}</li>
+                                {% endfor %}
+                            </ul>
+
+                        </td>
+                        <td>${{ order.order_items.all|sum:'price' }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
                 
             </table>
+            {% else %}
+            <p> No orders found </p>
+            {% endif %}
     </div>
 
     <!-- Add Bootstrap JS and dependencies -->
