--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="{% static 'css/tables/styles.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        .table-img {
+            width: 100px;
+            height: auto;
+        }
+        .table th, .table td {
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -71,19 +80,27 @@
         </div>
 
         <!-- Existing Items List -->
-        <div class="row">
-            {% for item in items %}
-                <div class="col-md-2 mb-2">
-                    <div class="card">
-                        <img src="{{ item.image.url }}" class="card-img-top" alt="{{ item.name }}">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ item.name }}</h5>
-                            <p class="card-text">{{ item.description }}</p>
-                            <p class="card-text"><strong>Price:</strong> ₹{{ item.price }}</p>
-                        </div>
-                    </div>
-                </div>
-            {% endfor %}
+        <div class="table-responsive">
+            <table class="table table-bordered table-hover">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>Image</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in items %}
+                        <tr>
+                            <td><img src="{{ item.image.url }}" alt="{{ item.name }}" class="table-img"></td>
+                            <td>{{ item.name }}</td>
+                            <td>{{ item.description }}</td>
+                            <td>₹{{ item.price }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 
