--- a/app/templates/table_details.html
+++ b/app/templates/table_details.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="{% url 'dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Menu</a>
+                        <a class="nav-link" href="{% url 'menu' %}">Menu</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="{% url 'tables' %}">Tables</a>
