--- a/app/templates/customer_main.html
+++ b/app/templates/customer_main.html
@@ -65,11 +65,15 @@
                         <a class="nav-link active" href="{% url 'customer_main' %}">Menu</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'cart' %}">Cart</a>
+                    </li>
+                    <li class="nav-item">
                         <form method="POST" action="{% url 'logout' %}" class="d-inline">
                             {% csrf_token %}
                             <button type="submit" class="btn btn-link nav-link" style="display: inline; padding: 0; border: none; background: none;">Logout</button>
                         </form>
                     </li>
+                    
                 </ul>
             </div>
         </div>
@@ -88,7 +92,7 @@
                             <p class="card-text">₹{{ item.price }}</p>
                             <form method="POST" action="{% url 'customer_main' %}">
                                 {% csrf_token %}
-                                <input type="hidden" name="item_id" value="{{ item.id }}">
+                                <input type="hidden" name="item_id" value="{{ item.item_id }}">
                                 <div class="input-group mb-3">
                                     <button type="button" class="btn btn-outline-secondary" onclick="decrementQuantity(this)">-</button>
                                     <input type="number" name="quantity" value="1" min="1" class="form-control quantity-input" aria-label="Quantity">
@@ -96,6 +100,7 @@
                                 </div>
                                 <button type="submit" class="btn btn-primary">Add to Order</button>
                             </form>
+                            
                         </div>
                     </div>
                 </div>
